--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@ async function runCheck() {
     const urlInput = document.getElementById("urlInput").value.trim();
     const resultBox = document.getElementById("resultBox");
     const rawColumn = document.getElementById("rawHTML");
-    const renderedColumn = document.getElementById("renderedHTML");
     const iframe = document.getElementById("renderFrame");
 
     if (!urlInput) {
@@ -102,36 +101,37 @@ async function runCheck() {
     }
 
     // Reset UI
-    rawColumn.textContent = "Fetching raw HTML...";
-    renderedColumn.textContent = "Loading iframe...";
+    rawColumn.textContent = "Fetching raw HTML…";
     resultBox.innerHTML = `<p class="text-blue-600 font-bold">Analysing…</p>`;
+    iframe.src = urlInput;
 
-    // --- FETCH RAW HTML FROM API ---
     let rawHtml = "";
+
+    // === 1. FETCH RAW HTML FROM THE SERVERLESS FUNCTION ===
     try {
         const apiUrl = `/api/fetch-html.js?url=${encodeURIComponent(urlInput)}`;
         const response = await fetch(apiUrl);
 
-        if (!response.ok) throw new Error("API returned " + response.status);
+        if (!response.ok) {
+            throw new Error("API returned " + response.status);
+        }
 
         const data = await response.json();
         rawHtml = data.html || "";
 
-        console.log("RAW LENGTH:", rawHtml.length);
+        // Show the first part of the raw HTML in the left column
+        rawColumn.textContent = rawHtml.substring(0, 20000) || "No HTML returned.";
+
+        console.log("RAW HTML LENGTH:", rawHtml.length);
 
         if (!rawHtml || rawHtml.length < 50) {
-            rawColumn.textContent = "Error: Raw HTML is empty or blocked by the website.";
             resultBox.innerHTML = `
-                <p class="text-red-600 font-bold">The website blocked server-side HTML fetching.</p>
-                <p class="text-gray-700">Some sites (Next.js + Cloudflare) won't allow raw HTML extraction.</p>
+                <p class="text-red-600 font-bold text-xl">Raw HTML is empty or blocked.</p>
+                <p class="text-gray-700">The website may block server-side requests.</p>
             `;
             return;
         }
-
-        rawColumn.textContent = rawHtml;
-
     } catch (err) {
-        console.error(err);
         rawColumn.textContent = "Error fetching raw HTML.";
         resultBox.innerHTML = `
             <p class="text-red-600 font-bold">Error fetching raw HTML</p>
@@ -140,61 +140,36 @@ async function runCheck() {
         return;
     }
 
-    // --- LOAD IFRAME ---
-    iframe.src = urlInput;
-
-    // Give the iframe time to hydrate
-    await new Promise(resolve => setTimeout(resolve, 1500));
-
-    // POLL THE IFRAME DOM SAFELY
-    function tryGetRenderedHTML() {
-        try {
-            return iframe.contentDocument.documentElement.innerHTML;
-        } catch (e) {
-            return "";
-        }
-    }
-
-    let renderedHtml = "";
-    let attempts = 0;
-
-    while (attempts < 20) {
-        renderedHtml = tryGetRenderedHTML();
-
-        if (renderedHtml && renderedHtml.length > 50) break;
-
-        attempts++;
-        await new Promise(resolve => setTimeout(resolve, 500));
-    }
-
-    if (!renderedHtml || renderedHtml.length < 50) {
-        renderedColumn.textContent = "Could not extract fully rendered HTML (iframes may be blocked).";
-        resultBox.innerHTML = `
-            <p class="text-red-600 font-bold">Iframe HTML not accessible.</p>
-            <p class="text-gray-700">Some websites block iframe access using COOP/COEP or Cloudflare.</p>
-        `;
-        return;
-    }
-
-    renderedColumn.textContent = renderedHtml;
-
-    // --- DETERMINE SSR / CSR ---
-
-    // Heuristic based on real-world Next.js behaviour
-    const isCSR =
+    // === 2. DETECT SSR VS CSR FROM RAW HTML ===
+    const hasNextCSRMarkers =
         rawHtml.includes("BAILOUT_TO_CLIENT_SIDE_RENDERING") ||
         rawHtml.includes("__next_f.push") ||
-        !rawHtml.replace(/\s+/g, "").match(/<main|<div|<section/); // no real content
+        rawHtml.includes("id=\"__next\"") && !rawHtml.match(/<main|<div|<section/i);
 
+    const appearsEmptyDocument =
+        rawHtml.replace(/\s+/g, "").length < 500; // super minimal markup
+
+    let isCSR = false;
+
+    if (hasNextCSRMarkers || appearsEmptyDocument) {
+        isCSR = true;
+    }
+
+    // === 3. DISPLAY RESULT ===
     if (isCSR) {
         resultBox.innerHTML = `
             <p class="text-yellow-700 font-bold text-xl">Client-Side Rendering (CSR)</p>
-            <p class="text-gray-700 mt-2">The server delivered almost no usable HTML. The page is rendered in the browser via JavaScript.</p>
+            <p class="text-gray-700 mt-2">
+                The server delivered minimal or placeholder HTML.
+                The actual content loads only in the browser via JavaScript.
+            </p>
         `;
     } else {
         resultBox.innerHTML = `
             <p class="text-green-700 font-bold text-xl">Server-Side Rendering (SSR)</p>
-            <p class="text-gray-700 mt-2">Meaningful HTML was delivered directly from the server.</p>
+            <p class="text-gray-700 mt-2">
+                Meaningful content was delivered directly in the HTML response.
+            </p>
         `;
     }
 }
