Replace button with new ID and class attributes

--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
             placeholder="https://example.com"
             type="text"
           />
-          <button
-            onclick="runCheck()"
-            class="px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition"
-          >
-            Analyse
-          </button>
+          <button id="checkBtn" class="px-4 py-2 bg-blue-600 text-white rounded">Analyse</button>
         </div>
       </div>
 
