--- a/index.html
+++ b/index.html
@@ -2,154 +2,200 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Rendering Inspector</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Poppins Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            background-color: #f5f7fa;
+            font-family: "Poppins", sans-serif;
+        }
+        .result-box {
+            min-height: 60px;
+        }
+        pre {
+            background: #f3f3f3;
+            border-radius: 6px;
+            padding: 15px;
+            max-height: 70vh;
+            overflow-y: auto;
+            font-size: 0.85rem;
+        }
+        iframe {
+            border: 1px solid #ccc;
+            border-radius: 6px;
+        }
+        h1, h2, .card-header {
+            font-weight: 600;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 min-h-screen">
 
-    <div class="max-w-6xl mx-auto py-10">
+<body>
 
-        <h1 class="text-3xl font-bold text-center mb-6">Rendering Inspector</h1>
+<div class="container py-5">
 
-        <!-- INPUT AREA -->
-        <div class="flex gap-4 mb-6">
-            <input id="urlInput"
-                   type="text"
-                   placeholder="Enter a URL (e.g. https://flirtist.ai)"
-                   class="flex-1 px-4 py-2 border rounded w-full">
-            <button id="checkBtn"
-                    class="px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
+    <!-- Heading -->
+    <div class="text-center mb-5">
+        <h1 class="fw-bold">Rendering Inspector</h1>
+        <p class="text-muted">Detect whether a webpage uses Server-Side Rendering (SSR) or Client-Side Rendering (CSR)</p>
+    </div>
+
+    <!-- Input Row -->
+    <div class="row mb-4">
+        <div class="col-md-9">
+            <input id="urlInput" type="text" placeholder="Enter a URL (e.g. https://flirtist.ai)" class="form-control form-control-lg">
+        </div>
+
+        <div class="col-md-3 text-md-end mt-3 mt-md-0">
+            <button id="checkBtn" class="btn btn-primary btn-lg w-100">
                 Analyse
             </button>
         </div>
-
-        <!-- RESULT BOX -->
-        <div id="resultBox" class="mb-6 text-center text-lg font-semibold text-gray-700">
-            Waiting for input…
-        </div>
-
-        <!-- TWO COLUMN LAYOUT -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-
-            <!-- LEFT COLUMN: RAW HTML -->
-            <div class="bg-white p-4 rounded shadow">
-                <h2 class="text-xl font-bold mb-2">Raw HTML Returned by Server</h2>
-                <pre id="rawHTML"
-                     class="whitespace-pre-wrap text-sm bg-gray-100 p-3 rounded max-h-[70vh] overflow-auto">
-                </pre>
-            </div>
-
-            <!-- RIGHT COLUMN: LIVE PREVIEW -->
-            <div class="bg-white p-4 rounded shadow">
-                <h2 class="text-xl font-bold mb-2">Browser Rendering (Iframe Preview)</h2>
-                <iframe id="renderFrame"
-                        class="w-full h-[70vh] border rounded bg-white"
-                        src="https://placehold.co/600x400?text=Preview+Here">
-                </iframe>
-            </div>
-
-        </div>
     </div>
 
-    <!-- ============================= -->
-    <!--   SSR / CSR DETECTOR LOGIC    -->
-    <!-- ============================= -->
+    <!-- Result Box -->
+    <div id="resultBox" class="result-box text-center fw-semibold text-secondary mb-4">
+        Waiting for input…
+    </div>
 
-    <script>
-    // --- MAIN ANALYSER FUNCTION ---
-    async function runCheck() {
-        console.log("runCheck() started");
+    <!-- Two Columns -->
+    <div class="row g-4">
 
-        const urlInput = document.getElementById("urlInput").value.trim();
-        const resultBox = document.getElementById("resultBox");
-        const rawColumn = document.getElementById("rawHTML");
-        const iframe = document.getElementById("renderFrame");
+        <!-- Raw HTML column -->
+        <div class="col-md-6">
+            <div class="card shadow-sm border-0">
+                <div class="card-header bg-white fw-bold h5">
+                    Raw HTML Returned by Server
+                </div>
+                <div class="card-body">
+                    <pre id="rawHTML">No HTML loaded yet.</pre>
+                </div>
+            </div>
+        </div>
 
-        if (!urlInput) {
-            resultBox.innerHTML = `<p class="text-red-600 font-bold">Please enter a URL.</p>`;
-            return;
-        }
+        <!-- Iframe Preview -->
+        <div class="col-md-6">
+            <div class="card shadow-sm border-0">
+                <div class="card-header bg-white fw-bold h5">
+                    Browser Rendering (Iframe Preview)
+                </div>
+                <div class="card-body">
+                    <iframe id="renderFrame"
+                            class="w-100"
+                            style="height: 70vh;"
+                            src="https://placehold.co/600x400?text=Preview+Here">
+                    </iframe>
+                </div>
+            </div>
+        </div>
 
-        rawColumn.textContent = "Fetching raw HTML…";
-        resultBox.innerHTML = `<p class="text-blue-600 font-bold">Analysing…</p>`;
+    </div>
 
-        // Show live preview visually
-        iframe.src = urlInput;
+</div>
 
-        let rawHtml = "";
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-        // --- FETCH RAW HTML FROM VERCEL SERVERLESS FUNCTION ---
-        try {
-            const apiUrl = `/api/fetch-html.js?url=${encodeURIComponent(urlInput)}`;
-            console.log("Fetching:", apiUrl);
+<!-- ====================================================== -->
+<!--                SSR / CSR DETECTOR LOGIC                -->
+<!-- ====================================================== -->
 
-            const response = await fetch(apiUrl);
-            if (!response.ok) throw new Error("API returned " + response.status);
+<script>
+async function runCheck() {
+    console.log("runCheck() started");
 
-            const data = await response.json();
-            rawHtml = data.html || "";
+    const urlInput = document.getElementById("urlInput").value.trim();
+    const resultBox = document.getElementById("resultBox");
+    const rawColumn = document.getElementById("rawHTML");
+    const iframe = document.getElementById("renderFrame");
 
-            rawColumn.textContent = rawHtml.substring(0, 20000) || "No HTML returned.";
-
-            console.log("RAW HTML LENGTH:", rawHtml.length);
-
-            if (!rawHtml || rawHtml.length < 50) {
-                resultBox.innerHTML = `
-                    <p class="text-red-600 font-bold text-xl">Raw HTML is empty or blocked.</p>
-                    <p class="text-gray-700">The website may block server-side requests.</p>
-                `;
-                return;
-            }
-
-        } catch (err) {
-            console.error(err);
-            rawColumn.textContent = "Error fetching raw HTML.";
-            resultBox.innerHTML = `
-                <p class="text-red-600 font-bold">Error fetching raw HTML</p>
-                <p class="text-gray-700">${err.message}</p>
-            `;
-            return;
-        }
-
-        // --- DETECT SSR OR CSR ---
-        const isCSR =
-            rawHtml.includes("BAILOUT_TO_CLIENT_SIDE_RENDERING") ||
-            rawHtml.includes("__next_f.push") ||
-            (rawHtml.includes('id="__next"') && !rawHtml.match(/<main|<div|<section/i));
-
-        if (isCSR) {
-            resultBox.innerHTML = `
-                <p class="text-yellow-700 font-bold text-xl">Client-Side Rendering (CSR)</p>
-                <p class="mt-2 text-gray-700">
-                    This HTML was mostly empty and depends on JavaScript to render content.
-                </p>
-            `;
-        } else {
-            resultBox.innerHTML = `
-                <p class="text-green-700 font-bold text-xl">Server-Side Rendering (SSR)</p>
-                <p class="mt-2 text-gray-700">
-                    Meaningful content was returned directly in the HTML.
-                </p>
-            `;
-        }
+    if (!urlInput) {
+        resultBox.innerHTML = `<span class="text-danger fw-bold">Please enter a URL.</span>`;
+        return;
     }
-    </script>
 
-    <!-- ENSURE BUTTON ALWAYS WORKS -->
-    <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        const btn = document.getElementById("checkBtn");
+    rawColumn.textContent = "Fetching raw HTML…";
+    resultBox.innerHTML = `<span class="text-primary fw-bold">Analysing…</span>`;
 
-        if (!btn) {
-            console.error("Analyse button not found in DOM!");
+    iframe.src = urlInput;
+
+    let rawHtml = "";
+
+    // --- FETCH RAW HTML ---
+    try {
+        const apiUrl = `/api/fetch-html.js?url=${encodeURIComponent(urlInput)}`;
+        console.log("Fetching:", apiUrl);
+
+        const response = await fetch(apiUrl);
+        if (!response.ok) throw new Error("API returned " + response.status);
+
+        const data = await response.json();
+        rawHtml = data.html || "";
+
+        rawColumn.textContent = rawHtml.substring(0, 20000) || "No HTML returned.";
+
+        console.log("RAW HTML LENGTH:", rawHtml.length);
+
+        if (!rawHtml || rawHtml.length < 50) {
+            resultBox.innerHTML = `
+                <span class="text-danger fw-bold h5">Raw HTML is empty or blocked.</span>
+                <p class="text-muted">The website may block server-side requests.</p>
+            `;
             return;
         }
 
-        console.log("Button event attached.");
-        btn.addEventListener("click", runCheck);
-    });
-    </script>
+    } catch (err) {
+        console.error(err);
+        rawColumn.textContent = "Error fetching raw HTML.";
+        resultBox.innerHTML = `
+            <span class="text-danger fw-bold">Error fetching raw HTML</span>
+            <p class="text-muted">${err.message}</p>
+        `;
+        return;
+    }
+
+    // --- DETECT SSR OR CSR ---
+    const isCSR =
+        rawHtml.includes("BAILOUT_TO_CLIENT_SIDE_RENDERING") ||
+        rawHtml.includes("__next_f.push") ||
+        (rawHtml.includes('id="__next"') && !rawHtml.match(/<main|<div|<section/i));
+
+    if (isCSR) {
+        resultBox.innerHTML = `
+            <span class="text-warning fw-bold h4">Client-Side Rendering (CSR)</span>
+            <p class="text-muted mt-2">The server delivered minimal or placeholder HTML. Content loads via JavaScript.</p>
+        `;
+    } else {
+        resultBox.innerHTML = `
+            <span class="text-success fw-bold h4">Server-Side Rendering (SSR)</span>
+            <p class="text-muted mt-2">Meaningful HTML content was delivered directly from the server.</p>
+        `;
+    }
+}
+</script>
+
+<!-- ENSURE BUTTON ALWAYS WORKS -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const btn = document.getElementById("checkBtn");
+
+    if (!btn) {
+        console.error("Analyse button not found!");
+        return;
+    }
+
+    console.log("Button event attached.");
+    btn.addEventListener("click", runCheck);
+});
+</script>
 
 </body>
 </html>
